# CSCE-448-Final

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  README.txt  build.sh
src/: background.cpp  background.h  camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  scene.h  scope_guard.cpp  scope_guard.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.cpp  vertex.h  window.cpp  window.h
